# configloader-rs

./: Cargo.toml  Makefile  README.md
configloader/: Cargo.toml
configloader/src/: lib.rs
configloader/tests/: config_loader.rs
configloader_derive/: Cargo.toml
configloader_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/src/: lib.rs
test_suite/tests/: compile_errors.rs  config_loader.rs  custom_types.rs  defaults_and_skip.rs  env_overrides.rs  error_reporting.rs  prefixes.rs  primitive_types.rs  std_types.rs
test_suite/tests/ui/: malformed_default_attr.rs  malformed_default_attr.stderr  malformed_env_attr.rs  malformed_env_attr.stderr  malformed_prefix_attr.rs  malformed_prefix_attr.stderr
