[package]
name = "configloader_derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Proc macro derive implementation for configloader"
license = "Apache-2.0"
repository = "https://github.com/alfredosa/configloader-rs"
readme = "../README.md"
keywords = ["config", "env", "derive", "proc-macro"]
categories = ["config"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
